--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
 
 <div class="vertical_line"></div>
 
-<a href="home.html">
+<a href="index.html">
 <button class="take_me_home_button"> << TAKE ME HOME</button>
 </a>
 
