compiler project page

--- a/side_projects.html
+++ b/side_projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Soheil's Side Projects</title>
-<link rel="stylesheet" type="text/css" href="contact_me.css">
+<link rel="stylesheet" type="text/css" href="side_projects.css">
 </head>
 
 <body>
@@ -14,6 +14,10 @@
 
 <a href="index.html">
 <button class="take_me_home_button"> << TAKE ME HOME</button>
+</a>
+
+<a href="compiler.html">
+<button class="compiler_button">Compiler Project</button>
 </a>
 
 </body>
