side projects update
Adding some more pages and a little bit more description under the side_projects page

--- a/side_projects.html
+++ b/side_projects.html
@@ -12,12 +12,28 @@
 
 <div class="vertical_line"></div>
 
+<p> There are two main things that I like to use as motivation for my side projects.<br><br>
+
+The first one is the saying "you don't know what you don't know". Something about being ignorant to my surroundings really makes me uncomfortable. I love the feeling of euphoria when you finally understand how something works that you previously were totally ignorant to. For the most part a lot of people are ignorant to a lot of things (and rightfully so) because there is only so much that a human brain can handle. In other words "ignorant is bliss". On some level I agree with that statement but on another level I find it an excuse to remain complacent and not even try to understand how things work. And so I'll be trying to push the limit of how much I can handle before I say "This seems so complicated that ignorance is indeed bliss". I'm a firm believer (especially as I age) that there is nothing that another human has created that can not be understood in its entirety by another fellow human being. There is probably some hubris mixed in there but I have learned that this way of thinking only helps in tackling hurdles that seem daunting.<br><br>
+
+The second one is the Youtube channel "Primitive Technology". It's based on this guy just living out in the middle of nowhere and literally building everything from ground zero. I'd sort of like to be that guy with modern technology. I find myself feeling most fulfilled when I'm building things from scratch with no previous knowledge. Sure the ramp up time is going to be long, but at the end of the day that's what makes it fun. So I'll be listing to the left a bunch of projects that I intend to pursue in my free time. Being a hardware engineer I'm trying to pick projects mostly on the software side that will not only expand my horizon but also challenge me to think of ways software decisions impact hardware design.
+
+</p>
+
 <a href="index.html">
 <button class="take_me_home_button"> << TAKE ME HOME</button>
 </a>
 
+<a href="website.html">
+<button class="website_button">Website Project</button>
+</a>
+
 <a href="compiler.html">
 <button class="compiler_button">Compiler Project</button>
+</a>
+
+<a href="browser.html">
+<button class="browser_button">Browser Project</button>
 </a>
 
 </body>
