philosophy page added

--- a/interests.html
+++ b/interests.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Soheil's Side Projects</title>
-<link rel="stylesheet" type="text/css" href="contact_me.css">
+<title>Soheil's Interests</title>
+<link rel="stylesheet" type="text/css" href="interests.css">
 </head>
 
 <body>
 
-<h1> Side Projects </h1>
+<h1> Interests </h1>
 <hr class="top">
 
 <div class="vertical_line"></div>
 
+<p>
+
+</p>
+
 <a href="index.html">
 <button class="take_me_home_button"> << TAKE ME HOME</button>
+</a>
+
+<a href="philosophy.html">
+<button class="philosophy_button">Philosophy</button>
 </a>
 
 </body>
